Completed BlockedEmailDomains, CountryRightFormed, NotNullField annotations.